--- a/styles/Team.css
+++ b/styles/Team.css
@@ -13,73 +13,135 @@
   align-items: center;
   justify-content: space-around;
   height: calc(100vh - 150px);
+  align-items: flex-start;
+  padding-top: 2rem;
+  gap: 4rem;
+  margin: 0rem 4rem;
 }
 .team__info-section {
   height: 200px;
   width: 200px;
 }
 /* ---------------------------LEAGUE RANK---------------------------- */
+#leagueRank {
+  background: var(--primaryColor);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+span.leagueRank__group-title {
+  text-transform: uppercase;
+  color: #666;
+  margin: 1rem 0rem !important;
+  display: inline-block;
+  font-weight: 800;
+  font-size: 19px;
+}
+.leagueRank__container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  border: 1px solid #535353;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  padding: 1rem 2rem;
+  transition: 0.5s ease;
+  color: white;
+  width: 100%;
+}
+
 .leagueRank__container-info {
   display: flex;
   width: 100%;
   justify-content: center;
   flex-direction: column;
-  padding-bottom: 2rem;
 }
+
+.leagueRank__container-info span {
+  color: var(--secondaryColor);
+}
+
 .leagueRank__container-info div {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 1rem;
+  width: 100%;
+  height: 100%;
 }
+
 .leagueRank__container-info img {
-  width: 100px;
-  height: 100px;
+  width: 6%;
+  height: 100%;
 }
+
 .leagueRank__container-info > span {
-  margin-left: 1rem;
   padding-top: 1rem;
 }
+
 /* ---------------------------LEAGUE TEAM---------------------------- */
-#leagueTeam {
+.leagueTeam__container span {
+  color: var(--secondaryColor);
+}
+.leagueTeam__information {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
 }
-.leagueRank__teams {
-  overflow: auto;
-  height: 450px;
-}
-.leagueTeam__container img {
-  width: 40px;
-}
-.leagueTeam__container {
+.leagueTeam__information div {
+  width: 90%;
+  text-align: left;
   display: flex;
   align-items: center;
   justify-content: flex-start;
   gap: 1rem;
 }
-.leagueTeam__container-name {
-  width: 160px;
+.leagueTeam__information > p:first-child {
+  width: 30px;
 }
-.leagueTeam__container-position {
-  width: 35px;
+.leagueTeam__information img {
+  width: 30px;
+}
+.leagueRank__table {
+  max-height: calc(100vh - 400px);
+  overflow: auto;
+}
+th {
+  text-align: center;
+  color: var(--secondaryColor);
+  font-weight: 900;
+  text-transform: uppercase;
+}
+td {
+  text-align: center;
+  width: 350px;
+  color: var(--secondaryColor);
+}
+tr:nth-child(even) {
+  background: #e9e8e8;
+}
+td.leagueTeam__information > div > span:first-child {
+  width: 25px;
 }
 
 /* --------------------------INFO TEAM --------------------------*/
 .team__info h1,
 .team__info h2.team__info span,
 .team__info p {
-  color: white;
+  color: var(--secondaryColor);
+}
+.infoTeam__container-team-text > p {
+  margin-top: 0.4rem;
+  font-weight: 700;
 }
 .infoTeam__container {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
   border: 1px solid #535353;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   padding: 1rem;
   transition: 0.5s ease;
-  cursor: pointer;
 }
 .infoTeam__container-team-text {
   display: flex;
@@ -110,8 +172,16 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  align-items: center;
 }
-.infoTeam__container:hover {
-  transform: scale(1.04);
-  transition: 0.5s ease;
+.infoTeam__container > a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.infoTeam__container > a button {
+  padding: 0.5rem 1rem;
+  background: unset;
+  border: 1px solid black;
+  cursor: pointer;
 }
