--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,14 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 :root {
-  --primaryColor: #303030;
-  --secondaryColor: #edededfc;
+  --primaryColor: #edededfc;
+  --secondaryColor: #303030;
 }
 html {
   height: 100vh;
   overflow: hidden;
   background-color: var(--primaryColor);
   font-family: "Montserrat", sans-serif;
+  position: relative;
+  left: -7px;
 }
 h1,
 p,
@@ -27,4 +29,35 @@ a,
 a:visited,
 a:active {
   color: inherit;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 0px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+/* Estilo para las tablas LEAGUES */
+table {
+  border-collapse: collapse;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+th {
+  border: 1px solid #dddddd;
+  padding: 8px;
+}
+
+td {
+  border: 1px solid #dddddd;
+  padding: 8px;
 }
