--- a/styles/Team.css
+++ b/styles/Team.css
@@ -12,25 +12,39 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  height: calc(100vh - 150px);
   align-items: flex-start;
   padding-top: 2rem;
-  gap: 4rem;
   margin: 0rem 4rem;
+  flex-direction: column;
 }
 .team__info-section {
   height: 200px;
   width: 200px;
 }
+.team__info-body {
+  display: flex;
+  gap: 4rem;
+}
+.team__info-header {
+  display: flex;
+  align-items: flex-end;
+  margin-bottom: 1rem;
+  gap: 5rem;
+  width: 100%;
+  justify-content: space-between;
+}
+
 /* ---------------------------LEAGUE RANK---------------------------- */
 #leagueRank {
   background: var(--primaryColor);
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   width: 100%;
 }
-
+.leagueRank__Group {
+  width: 48%;
+}
 span.leagueRank__group-title {
   text-transform: uppercase;
   color: #666;
@@ -38,54 +52,74 @@ span.leagueRank__group-title {
   display: inline-block;
   font-weight: 800;
   font-size: 19px;
+  width: 100%;
+  text-align: center;
+  background-color: #7a7a7a;
+  color: white;
+  padding: 0.3rem 0rem;
 }
 .leagueRank__container {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  border: 1px solid #535353;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   padding: 1rem 2rem;
   transition: 0.5s ease;
   color: white;
   width: 100%;
+  justify-content: center;
 }
-
-.leagueRank__container-info {
+/* -------------------------------------------------------- headerCompetitionInfo --------------------------------------------------------*/
+.headerCompetitionInfo {
   display: flex;
-  width: 100%;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  padding: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  position: relative;
 }
 
-.leagueRank__container-info span {
+.headerCompetitionInfo span {
   color: var(--secondaryColor);
 }
 
-.leagueRank__container-info div {
+.headerCompetitionInfo div {
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
-  gap: 1rem;
+  gap: 0.5rem 1rem;
   height: 100%;
 }
 
-.leagueRank__container-info img {
+.headerCompetitionInfo img {
   width: 20%;
   height: 100%;
 }
 
-.leagueRank__container-info > span {
+.headerCompetitionInfo > span {
   padding-top: 1rem;
 }
-.leagueRank__text-head {
+.headerCompetitionInfo__text-head {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
 }
-.leagueRank__select-Competition {
+.headerCompetitionInfo__select-competition {
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
+.headerCompetitionInfo > a button {
+  padding: 0.5rem 1rem;
+  background: unset;
+  border: 1px solid black;
+  cursor: pointer;
+}
+a.button-select-team {
+  position: absolute;
+  top: -55px;
+  background: white;
+}
+
 /* ---------------------------LEAGUE TEAM---------------------------- */
 .leagueTeam__container span {
   color: var(--secondaryColor);
@@ -107,10 +141,17 @@ span.leagueRank__group-title {
 }
 .leagueTeam__information img {
   width: 30px;
+  height: 30px;
 }
 .leagueRank__table {
-  max-height: calc(100vh - 400px);
+  max-height: calc(90vh - 400px);
   overflow: auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 3rem;
+}
+td.leagueTeam__information span {
+  width: inherit;
 }
 th {
   text-align: center;
@@ -135,6 +176,7 @@ td.leagueTeam__information > div > span:first-child {
 .team__info h2.team__info span,
 .team__info p {
   color: var(--secondaryColor);
+  width: max-content;
 }
 .infoTeam__container-team-text > p {
   margin-top: 0.4rem;
@@ -142,12 +184,12 @@ td.leagueTeam__information > div > span:first-child {
 }
 .infoTeam__container {
   display: flex;
-  flex-direction: column;
   gap: 1rem;
-  border: 1px solid #535353;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   padding: 1rem;
   transition: 0.5s ease;
+  justify-content: center;
+  height: 100%;
 }
 .infoTeam__container-team-text {
   display: flex;
@@ -155,39 +197,64 @@ td.leagueTeam__information > div > span:first-child {
   flex-direction: column;
   gap: 0.3rem;
 }
-.infoTeam__container-team-text img {
-  width: 70px;
+.infoTeam__container-stadium-text > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  width: 340px;
 }
-.infoTeam__container-stadium-text img {
-  width: 300px;
+.infoTeam__container-stadium-text > div > img {
+  width: 80px;
 }
-.infoTeam__container-stadium-text > p:first-child {
-  font-weight: 900;
+.infoTeam__container-stadium-text > img {
+  width: 225px;
+}
+.infoTeam__container-text {
+  gap: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.infoTeam__container-title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.infoTeam__container-text span:first-child {
+  font-weight: 700;
   text-transform: uppercase;
   font-size: 17px;
+  color: var(--secondaryColor);
 }
-.infoTeam__container-stadium-text > p {
+.infoTeam__container-title > img {
+  width: 16%;
+  position: absolute;
+  left: -65px;
+  top: 32px;
+  transition: 0.5s ease;
+}
+.infoTeam__container-title > img:hover {
+  transform: scale(1.1);
+}
+.infoTeam__container-text span {
   text-align: center;
 }
-.infoTeam__container-team-text h1 {
+.infoTeam__container-text h1 {
   text-transform: uppercase;
   font-size: 20px;
   font-weight: 900;
 }
 .infoTeam__container-stadium-text {
   display: flex;
-  flex-direction: column;
   gap: 0.5rem;
   align-items: center;
+  position: relative;
 }
 .infoTeam__container > a {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-.infoTeam__container > a button {
-  padding: 0.5rem 1rem;
-  background: unset;
-  border: 1px solid black;
-  cursor: pointer;
 }
