--- a/styles/Team.css
+++ b/styles/Team.css
@@ -63,7 +63,7 @@ span.leagueRank__group-title {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
   padding: 1rem 2rem;
   transition: 0.5s ease;
   color: white;
@@ -80,6 +80,7 @@ span.leagueRank__group-title {
   padding: 1rem;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   position: relative;
+  gap: 3rem;
 }
 
 .headerCompetitionInfo span {
@@ -88,15 +89,15 @@ span.leagueRank__group-title {
 
 .headerCompetitionInfo div {
   display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
+  align-items: center;
+  justify-content: center;
   gap: 0.5rem 1rem;
   height: 100%;
 }
 
 .headerCompetitionInfo img {
-  width: 20%;
-  height: 100%;
+  width: 100px;
+  height: 100px;
 }
 
 .headerCompetitionInfo > span {
@@ -122,6 +123,13 @@ a.button-select-team {
   position: absolute;
   top: -55px;
   background: white;
+  transition: all 0.5s ease;
+}
+a.button-select-team:hover ,a.button-select-team:hover button{
+  background: var(--secondaryColor);
+  color: white;
+  transition: all 0.5s ease;
+
 }
 
 /* ---------------------------LEAGUE TEAM---------------------------- */
@@ -184,7 +192,10 @@ td.leagueTeam__information > div > span:first-child {
 }
 
 .team__info h1{
-  font-size: 22px;
+  font-size: 20px;
+  text-wrap: pretty;
+    width: 200px;
+    text-align: center;
 }
 .infoTeam__container-team-text > p {
   margin-top: 0.4rem;
@@ -238,10 +249,10 @@ td.leagueTeam__information > div > span:first-child {
   color: var(--secondaryColor);
 }
 .infoTeam__container-title > img {
-  width: 16%;
+  width: 85px;
   position: absolute;
-  left: -65px;
-  top: 32px;
+  left: -59px;
+  top: -30px;
   transition: 0.5s ease;
 }
 .infoTeam__container-title > img:hover {
