--- a/styles/globals.css
+++ b/styles/globals.css
@@ -78,3 +78,36 @@ select {
   margin-top: 0.5rem;
   cursor: pointer;
 }
+
+
+
+/* LOADER CSS */
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 8px solid var(--secondaryColor);
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: var(--secondaryColor) transparent transparent transparent;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
