--- a/styles/Team.css
+++ b/styles/Team.css
@@ -306,3 +306,73 @@ td.leagueTeam__information > div > span:first-child {
   color: var(--secondaryColor);
   transition: all 0.5s ease;
 }
+
+
+@media (max-width:940px){
+  .infoTeam__container{
+    padding: unset;
+    height: unset;
+  }
+  .team__info{
+    margin: 0 1rem;
+    padding: unset;
+  }
+  .team__info-header {
+    flex-direction: column-reverse;
+    margin-top: 1rem;
+  }
+  .infoTeam__container-stadium-text > img{
+    height: 100%;
+    width: 70%;
+  }
+  .team__info h1{
+    font-size: 15px;
+    width: unset;
+  }
+  .infoTeam__container-text span:first-child{
+    font-size: 13px;
+  }
+  .infoTeam__container-text span{
+    font-size: 12px;
+  }
+  .infoTeam__container-title > img{
+    width: 60px;
+    margin-bottom: 0.5rem;
+    left: 0;
+    top: 0;
+  }
+  .infoTeam__container-stadium-text{
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem 0rem;
+  }
+  div#infoTeam {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+  .headerCompetitionInfo{
+    gap: unset; 
+    aspect-ratio: unset;
+    flex-direction: column;
+    padding: 0rem;
+    width: 100%;
+  }
+  .headerCompetitionInfo__select-competition{
+    padding: 0rem 1rem 1rem 1rem;
+  }
+  span.leagueRank__group-title{
+    font-size: 10px;
+  }
+  .leagueRank__Group {
+    width: 100%;
+  }
+  td{
+    width: 240px;
+  }
+  a.button-select-team{
+    left: 30%;
+  }
+}
